0.13.0 - 2018-XX-XX

  1. POM updates for GCS connector 1.9.0.

  2. Update all dependencies to latest versions.

  3. Change Maven project structure to be better compatible with IDEs.


0.12.1 - 2018-03-29

  1. Wire location through load, extract, and query jobs.

  2. Always require at least 2 partitions for sharded exports.

  3. POM updates for GCS connector 1.8.1.


0.12.0 - 2018-03-15

  1. POM updates for GCS connector 1.8.0.

  2. Change relocation package in shaded jar to be connector-specific.

  3. Min required Java version now is Java 8.


0.11.0 - 2018-02-22

  1. Relocate all dependencies in shaded jar.

  2. Update all dependencies to latest versions.

  3. POM updates for GCS connector 1.7.0.


0.10.3 - 2017-11-21

  1. POM updates for GCS connector 1.6.2.


0.10.2 - 2017-04-14

  1. POM updates for GCS connector 1.6.1.


0.10.1 - 2016-12-16

  1. Added a configurable write disposition when using
     IndirectBigQueryOutputFormat with "WRITE_APPEND" as the default.


0.10.0 - 2016-11-07

  1. Update output configuration keys to conform to the format in
     BigQueryConfiguration and have BigQueryOutputConfiguration handle
     the output path resolution and configuration.


0.9.0 - 2016-11-04

  1. Added temporary-path resolution to BigQueryConfiguration to
     automatically default to the GCS-specified system bucket if the BigQuery
     specific GCS bucket isn't specified and an explicit temporary GCS
     path for BigQuery isn't specified.
  2. Refactored the new IndirectBigQueryOutputFormat class hierarchy
     to require less boilerplate in format-specific implementations.
  3. Added support for federated BigQuery table outputs using the
     IndirectBigQueryOutputFormat.


0.8.1 - 2016-10-10

  1. Misc minor refactoring.


0.8.0 - 2016-10-05

  1. Added new still-experimental versions of BigQuery output which buffer to
     GCS before issuing the BigQuery load jobs, rather than using temporary
     BigQuery tables.