@@ -66,6 +66,7 @@
         </plugins>
       </build>
     </profile>
+
     <profile>
       <id>hadoop2</id>
       <dependencies>
@@ -96,6 +97,38 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>hadoop3</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-common</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-common</artifactId>
+          <classifier>tests</classifier>
+        </dependency>
+        <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-mapreduce-client-core</artifactId>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <testExcludes>
+                <exclude>**/hcfs/*1Test.java</exclude>
+              </testExcludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
     <profile>
       <id>integration-test</id>
       <activation>
@@ -135,6 +168,7 @@
       </build>
     </profile>
   </profiles>
+
   <dependencies>
     <dependency>
       <groupId>com.google.api-client</groupId>
