@@ -6,6 +6,8 @@
 
   3. Change Maven project structure to be better compatible with IDEs.
 
+  4. Support Hadoop 3.
+
 
 0.12.1 - 2018-03-29
 
